2025-02-28T01:03:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13579071622 # 579
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-28
* notice: last 14d: unq all: 4 13
* notice: prev accum: outdated-unq outdated-all / unq all: 462 855 / 476 869
* notice: next accum: outdated-unq outdated-all / unq all: 464 857 / 478 871
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-02-13] / [2025-02-14 2025-02-27]

2025-02-27T01:03:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13556582304 # 578
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-27
* notice: last 14d: unq all: 4 13
* notice: prev accum: outdated-unq outdated-all / unq all: 460 853 / 475 868
* notice: next accum: outdated-unq outdated-all / unq all: 462 855 / 476 869
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-12] / [2025-02-13 2025-02-26]

2025-02-26T01:03:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13534212119 # 577
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-26
* notice: last 14d: unq all: 5 14
* notice: prev accum: outdated-unq outdated-all / unq all: 460 853 / 474 867
* notice: next accum: outdated-unq outdated-all / unq all: 460 853 / 475 868
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-02-12 2025-02-25]

2025-02-25T01:03:24Z: