@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-02-28T01:03:46Z",
-  "count_outdated" : 857,
-  "uniques_outdated" : 464,
-  "count" : 871,
-  "uniques" : 478,
+  "timestamp" : "2025-03-01T01:08:12Z",
+  "count_outdated" : 859,
+  "uniques_outdated" : 466,
+  "count" : 872,
+  "uniques" : 479,
   "clones" : [
-    {
-      "timestamp": "2025-02-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2025-02-16T00:00:00Z",
       "count": 1,
@@ -112,6 +103,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-02-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
