@@ -1,12 +1,7 @@
 {
   "count": 13,
-  "uniques": 4,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2025-02-14T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-02-16T00:00:00Z",
       "count": 1,
@@ -61,6 +56,11 @@
       "timestamp": "2025-02-27T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-02-28T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
