@@ -1,3 +1,12 @@
+2025-03-01T01:08:12Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13599328268 # 580
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-01
+* notice: last 14d: unq all: 3 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 464 857 / 478 871
+* notice: next accum: outdated-unq outdated-all / unq all: 466 859 / 479 872
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-02-14] / [2025-02-28]
+
 2025-02-28T01:03:46Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13579071622 # 579
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-28
